# api/models/horseModel.js
@@ -1,95 +1,116 @@
 'use strict';
 
-const debug = require('debug')("horsesRef:horse");
-const mongoose = require('mongoose');
+const error = require('../helpers/errorCodes').error;
+const BAD_REQUEST = require('../helpers/errorCodes').BAD_REQUEST;
+const NOT_FOUND = require('../helpers/errorCodes').NOT_FOUND;
 const checkDB = require('./dbConnection').checkDB;
 const jsonpatch = require('fast-json-patch');
 const uuid = require('uuid/v4');
 const ajv = new require('ajv')();
-
+const patchModel = require('./patchModel');
+const validateJsonPatch = patchModel.validateJsonPatch;
 
 const horseSchema = require('./horseSchema');
-// Definitions du modele
-const horsePatches = new mongoose.Schema({
-    id:  {
-      type :      String,
-      required :  true,
-    },
-    tenantId : {
-      type :      String,
-      required :  true,
-    },
-    userId : {
-      type :      String,
-      required :  true,
-    },
-    date : {
-      type :      Date,
-      required :  true,
-    },
-    patches : [
-      mongoose.Schema.Types.Mixed
-    ]
-
-  });
-
 // Models are created from schemas using the mongoose.model() method:
-const horsePatchesModel = mongoose.model('horsePatches', horsePatches , 'horsePatches');
+const horsePatchModel = patchModel.objectPatchModel('horsePatches');
 
+const getAll = (tenantId) => checkDB()
+  .then(() => horsePatchModel
+    .aggregate()
+    .match({ tenantId })  // recherche tous les patch sur le cheval
+    .sort({ date: 1 })      //trie les resultats par date
+    .unwind("$patch")      //applati tous les patch
+    .group({ _id: "$id", patch: { $push:"$patch" } }) // regroupe tous les patch en un tableau
+    .exec()
+    .then(result => {
+      const horses = [];
+      for(let r of result) {
+        horses.push(jsonpatch.applyPatch({ tenantId, id: r._id }, r.patch).newDocument);
+      }
+      return horses;
+    }));
 /**
  *
- * @returns {Promise.<TResult>}
  */
 const get = (tenantId, id) => checkDB()
-  .then(() => horsePatchesModel
+  .then(() => horsePatchModel
     .aggregate()
     .match({ tenantId, id })  // recherche tous les patches sur le cheval
     .sort({ date: 1 })      //trie les resultats par date
-    .unwind("$patches")      //applati tous les patches
-    .group({ _id: "$id", patches: { $push:"$patches" } }) // regroupe tous les patches en un tableau
+    .unwind("$patch")      //applati tous les patch
+    .group({ _id: "$id", patch: { $push:"$patch" } }) // regroupe tous les patch en un tableau
     .exec()
     .then(result => {
-      console.log(result)
-      console.log(`${tenantId} ${id}`)
       if(result === null || result.length === 0) {
         // No such horse
         return null;
       }
       if(result.length !== 1) {
-        throw Error(`Horses db integrity error ${id} (${result.length})`);
+        throw error(BAD_REQUEST, `Horses db integrity error ${id} (${result.length})`);
       }
       //reconstruction du cheval
-      return jsonpatch.applyPatch({ tenantId, id }, result[0].patches).newDocument;
+      return jsonpatch.applyPatch({ tenantId, id }, result[0].patch).newDocument;
     }));
 
-const update = (userId, tenantId, horseNew) => get(tenantId, horseNew.id || "")
-  .then(horsePrev => {
-    const defaultHorse = { updatedAt: Date.now() };
-    if(horsePrev === null) {
-      horsePrev = {};
-      defaultHorse.createdAt = Date.now();
-      defaultHorse.id = uuid();
-      defaultHorse.tenantId = tenantId;
+const update = (horseId, userId, tenantId, newHorse) => get(tenantId, horseId || newHorse.id || "")
+  .then(prevHorse => {
+    const defaultHorse = {};
+    if (horseId === null) {
+      if (prevHorse === null) {
+        // ce cheval n'existe pas => on le crée
+        prevHorse = {};
+        horseId = newHorse.id || uuid();
+        defaultHorse.createdAt = new Date();
+        defaultHorse.id = horseId;
+        defaultHorse.tenantId = tenantId;
+      }
+      else {
+        throw error(BAD_REQUEST, `Horses db integrity error can't create ${newHorse.id} that already exits`);
+      }
     }
-    horseNew = Object.assign(defaultHorse, horseNew);
-    const patches = jsonpatch.compare(horsePrev, horseNew);
+    else if (prevHorse === null) {
+      throw error(NOT_FOUND, `unknow horse`);
+    }
+    else if (horseId !== newHorse.id) {
+      throw error(BAD_REQUEST, `Horses db integrity error ${newHorse.id} (should be ${horseId})`)
+    }
+    newHorse = Object.assign(defaultHorse, newHorse, { updatedAt: new Date() });
 
-    const entry = {
-      id: horseNew.id,
+    return horsePatchModel.create({
+      id: horseId,
       tenantId,
       userId,
       date: new Date(),
-      patches
-    };
+      patch: jsonpatch.compare(prevHorse, newHorse)
+    });
+  })
+  .then(entry => entry.id);
 
-    return horsePatchesModel.create(entry);
+const patch = (horseId, userId, tenantId, patch) => get(tenantId, horseId || "")
+  .then(prevHorse => {
+    if (prevHorse === null) {
+      throw error(NOT_FOUND, `unknow horse`);
+    }
+    if (!validateJsonPatch(patch)) {
+      throw error(BAD_REQUEST, 'bad patch format');
+    }
+    const newHorse = jsonpatch.applyPatch(Object.assign({}, prevHorse, { updatedAt: new Date() }), patch).newDocument;
+
+    return horsePatchModel.create({
+      id: horseId,
+      tenantId,
+      userId,
+      date: new Date(),
+      patch: jsonpatch.compare(prevHorse, newHorse)
+    });
   })
   .then(entry => entry.id);
 
 // make this available in our Node applications
 module.exports = {
   validator: ajv.compile(horseSchema),
-  model: horsePatchesModel,
+  getAll,
   get,
   update,
+  patch,
 };
