# api/swagger/swagger.yaml
@@ -200,8 +200,6 @@ paths:
         roles: [adm]
       consumes:
         - application/json
-      produces:
-        - application/json
       parameters:
         - name: settings
           in: body
@@ -282,8 +280,6 @@ paths:
       x-security:
         roles: [adm]
       consumes:
-        - application/json
-      produces:
         - application/json
       parameters:
         - name: tenant
@@ -373,8 +369,6 @@ paths:
         roles: [adm]
       consumes:
         - application/json
-      produces:
-        - application/json
       parameters:
         - name: tenant
           in: path
@@ -390,8 +384,6 @@ paths:
       responses:
         "200":
           description: The settings updated
-          schema:
-              type: object
         "401":
           description: Authentification error
           schema:
@@ -471,8 +463,6 @@ paths:
       x-security:
         roles: [adm, mng]
       consumes:
-        - application/json
-      produces:
         - application/json
       parameters:
         - name: tenant
@@ -570,8 +560,6 @@ paths:
       x-security:
         roles: [adm, mng]
       consumes:
-        - application/json
-      produces:
         - application/json
       parameters:
         - name: tenant
@@ -754,6 +742,105 @@ paths:
           description: Error
           schema:
               $ref: "#/definitions/ErrorResponse"
+
+    put:
+      summary: Update a horse
+      description: Update a horse
+      tags:
+        - API
+        - horses
+      operationId: updateHorse
+      x-tenantLoader: tenant
+      x-tenantDisabler: true
+      security:
+        - Bearer: []
+      x-security:
+        roles: [adm, snd]
+      consumes:
+        - application/json
+      parameters:
+        - name: tenant
+          in: path
+          description: Le nom du tenant
+          required: true
+          type: string
+        - name: horseId
+          in: path
+          description: L'id du cheval
+          required: true
+          type: string
+        - name: horse
+          in: body
+          description: The horse payload
+          required: true
+          schema:
+            $ref: "#/definitions/HorseType"
+      responses:
+        "200":
+          description: Success
+        "401":
+          description: Authentification error
+          schema:
+              $ref: "#/definitions/ErrorResponse"
+        "403":
+          description: Unautorized error
+          schema:
+              $ref: "#/definitions/ErrorResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+              $ref: "#/definitions/ErrorResponse"
+
+    patch:
+      summary: Update a horse
+      description: Update a horse with a patch
+      tags:
+        - API
+        - horses
+      operationId: patchHorse
+      x-tenantLoader: tenant
+      x-tenantDisabler: true
+      security:
+        - Bearer: []
+      x-security:
+        roles: [adm, snd]
+      consumes:
+        - application/json
+      parameters:
+        - name: tenant
+          in: path
+          description: Le nom du tenant
+          required: true
+          type: string
+        - name: horseId
+          in: path
+          description: L'id du cheval
+          required: true
+          type: string
+        - name: horsePatch
+          in: body
+          description: The horse payload
+          required: true
+          schema:
+            $ref: '#/definitions/JsonPatch'
+      responses:
+        "200":
+          description: Success
+        "401":
+          description: Authentification error
+          schema:
+              $ref: "#/definitions/ErrorResponse"
+        "403":
+          description: Unautorized error
+          schema:
+              $ref: "#/definitions/ErrorResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+              $ref: "#/definitions/ErrorResponse"
+
 # complex objects have schema definitions
 definitions:
 
@@ -889,3 +976,16 @@ definitions:
         type: string
     required:
       - message
+
+  JsonPatch:
+    description: A JSON Schema describing a JSON Patch
+    items:
+      properties:
+        op:
+          type: string
+        path:
+          type: string
+        from:
+          type: string
+      required:
+        - op
